--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 
 <body>
-Hello world.
+Move with arrow keys. Shoot with z.
+
+<script src="coi-serviceworker.js"></script>
+<iframe src="export/WebDanmaku.html" width=720 height=720></iframe>
+
 </body>
 
 </html>
