--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<html>
+<head>
+<script src="./coi-serviceworker.js"></script>
+</head>
 
 <body>
 Move with arrow keys. Shoot with z.
 
-<script src="coi-serviceworker.js"></script>
-<iframe src="export/WebDanmaku.html" width=720 height=720></iframe>
+<iframe src="./export/WebDanmaku.html" width=720 height=720></iframe>
 
 </body>
 
