--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 Move with arrow keys. Shoot with z.
 
-<iframe src="./export/WebDanmaku.html" width=720 height=720></iframe>
+<iframe credentialless src="./export/WebDanmaku.html" width=720 height=720></iframe>
 
 </body>
 
