--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 
 <body>
+<script>
+	const el = document.createElement("div")
+	el.innerHTML = `Cross origin isolated: ${window.crossOriginIsolated ? "✅" : "❌"}`
+	document.body.append(el);
+</script>
+
 Move with arrow keys. Shoot with z.
 
 <iframe credentialless src="./export/WebDanmaku.html" width=720 height=720></iframe>
